--- a/DMS_Meta.Rmd
+++ b/DMS_Meta.Rmd
@@ -619,6 +619,19 @@ moderator <- robust(moderator, cluster = study_id_1, clubSandwich = TRUE)
 
 anova(moderator, X=rbind(c(-1,1,0),c(-1,0,1), c(0,-1,1))) ### Need to double check this.
 
+
+### Check pairwise against model with intercept
+
+mod_intercept <- rma.mv(yi ~ 1 + sample_type_1,
+                   V = V_mat,
+                   random = ~ 1 | study_id_1/es_id, # random effect of study and estimate
+                   data=dat,
+                   digits=4)
+  
+mod_intercept <- robust(mod_intercept, cluster = study_id_1, clubSandwich = TRUE)
+
+mod_intercept
+
 ```
 
 
